--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,21 @@ body {
   height: 100vh;
   width: 100%;
 }
+
+/* TEST STYLES */
+
+.task-item {
+  display: flex;
+  gap: 1rem;
+}
+
+.project-list-ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.project-list-ul li {
+  display: flex;
+  gap: 2rem;
+}
