--- a/src/index.css
+++ b/src/index.css
@@ -7,22 +7,17 @@
 body {
   height: 100vh;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#root {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* TEST STYLES */
-
-.task-item {
-  display: flex;
-  gap: 1rem;
-}
-
-.project-list-ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.project-list-ul li {
-  display: flex;
-  gap: 2rem;
-}
